add jwt login
